social icons alignment fix

--- a/src/css/layout.css
+++ b/src/css/layout.css
@@ -119,6 +119,7 @@ body {
     margin-right: .5em;
     width: 1.3em;
     height: 1.3em;
+    margin-bottom: .2em;
 }
 
 .speaker-icon {
